--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -62,11 +62,11 @@
 				<div class="col-4"></div>
 
 				<div class="col-4">
-					<a class="text-center flex-grow-1 fw-bold text-decoration-none text-black" href="/">
-						<a href="/">
-							<img src="../../../../../images/goople.png" class="img-thumbnail" alt="구플" width="90px" />
+					<div class="d-flex justify-content-center">
+						<a class="text-center flex-grow-1 fw-bold text-decoration-none text-black" href="/">
+							<img src="../../../../../images/goople.png" class="img-thumbnail" alt="구플" width="170px"/>
 						</a>
-					</a>
+					</div>
 				</div>
 
 				<div class="col-4 d-flex justify-content-end">
@@ -87,7 +87,7 @@
 
 				<div class="m-1">
 					<a href="/">
-						<img src="../../../../../images/brand.png" class="img-thumbnail" alt="구플 로고" width="90px" />
+						<img src="../../../../../images/brand.png" class="img-thumbnail" alt="구플 로고" width="50px" />
 					</a>
 				</div>
 
