북마크 버그 fix

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -426,7 +426,7 @@
 	let bookmarked = '<h3>❤️</h3>';
 	let noBookmark = '<h3>🤍</h3>';
 
-	async function bookmarkPoint() {
+	async function bookmarkPoint(id) {
 // console.log('bookmarkPoint실행')
 		// let response = await fetch(`/check?username=${username}`);
 		let postingNum = document.querySelectorAll(".posting");
