--- a/src/main/resources/templates/comp/PostingDetail.mustache
+++ b/src/main/resources/templates/comp/PostingDetail.mustache
@@ -135,6 +135,7 @@
 	<div class="input-group mb-3">
 		<span class="input-group-text">종료일</span>
 		<input
+			id="dateNew"
 			type="text"
 			class="form-control"
 			value="{{#posting.expiryDate}}{{
@@ -148,14 +149,14 @@
 		{{^sessionComp.compname
 		}}<a
 			href="/user/applyForm/{{ postingId }}"
-			class="w-50 mb-3 ms-2 btn btn-info"
+			class="w-50 mb-3 btn btn-info"
 		>지원하기</a
 		>
 			<button
 				type="button"
 				action="/user/bookmarkForm/save"
 				method="post"
-				class="btn btn-warning mb-3 bookmark-button"
+				class="w-50 ms-2 btn btn-warning mb-3 bookmark-button"
 				data-posting-id="{{ posting.id }}"
 			>
 				북마크하기
