--- a/src/main/resources/templates/comp/resumeDetail.mustache
+++ b/src/main/resources/templates/comp/resumeDetail.mustache
@@ -106,12 +106,12 @@
     }}</textarea>
   </div>
 
-  <div class="d-flex justify-content-center">
+  {{! <div class="d-flex justify-content-center">
     <button type="button" class="mb-3 w-100 btn btn-success">입사 제안</button>
     <button type="button" class="mb-3 ms-3 w-100 btn btn-warning">
       북마크
     </button>
-  </div>
+  </div> }}
 </div>
 
 <script>
