--- a/src/main/resources/templates/comp/PostingDetail.mustache
+++ b/src/main/resources/templates/comp/PostingDetail.mustache
@@ -183,7 +183,7 @@
 						alert("북마크에 추가되었습니다.");
 					} else {
 						// 북마크 실패
-						alert("북마크 추가에 실패했습니다.");
+						alert("중복된북마크입니다.");
 					}
 				})
 				.catch(function (error) {
