--- a/src/main/resources/templates/user/recommendForm.mustache
+++ b/src/main/resources/templates/user/recommendForm.mustache
@@ -115,39 +115,41 @@
 					</div>
 				</div>
 
+			</form>
 
-				<div class="m-2 ms-2 me-2">
-					<div class="btn btn-success w-100" onclick="searchAll()">검색하기</div>
-				</div>
+			<div class="m-2 ms-2 me-2">
+				<div class="btn btn-success w-100" onclick="searchAll()">검색하기</div>
+			</div>
 
-				{{#compList}}
-				<div class="d-flex border border-info m-3 p-2">
-					<div class="col-9">
-						<div class="m-auto">
-							<span class="badge bg-danger">{{position}}</span>
-							{{#postingSkills}}
-							<span class="badge bg-secondary me-1">{{skill.skillname}}</span>
-							{{/postingSkills}}
-							<div>{{posting.title}}</div>
+			{{#compInfoList}}
+			<div class="d-flex border border-info m-3 p-2">
+				<div class="col-9">
+					<div class="m-auto">
+						<div>{{title}}</div>
+						<span class="badge bg-danger">{{position}}</span>
+						{{#postingSkills}}
+						<span class="badge bg-secondary me-1">{{skill.skillname}}</span>
+						{{/postingSkills}}
+						<div class="mt-3">
+							<a href="/user/applyForm/{{compInfoList.postingSkills.posting.id}}"
+								class="mb-3 ms-2 btn btn-info">지원하기</a>
 						</div>
 					</div>
-					<div class="mt-3">
-						<a href="/user/applyForm/{{postingId}}" class="mb-3 ms-2 btn btn-info">지원하기</a>
-
-					</div>
 				</div>
-				{{/compList}}
-
-				<input type="hidden" value="{{json}}" name="json" id="json">
-				<input type="hidden" value="{{position}}" name="positionSet" id="positionSet">
-			</form>
+			</div>
+			{{/compInfoList}}
 		</div>
+
 
 	</div>
 
-	<div class="col-xl-3 col-lg-2 col-md-1 col-sm-auto"></div>
 </div>
 
+<div class="col-xl-3 col-lg-2 col-md-1 col-sm-auto"></div>
+</div>
+
+<input type="hidden" value="{{json}}" name="json" id="json">
+<input type="hidden" value="{{position}}" name="positionSet" id="positionSet">
 
 
 <script>
