--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Brand</title>
+	<title>구플</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -10,7 +10,8 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet" />
 	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-
+	
+	<link rel="icon" href="../../../../../images/brand.png">
 
 	{{^sessionComp}}<style></style>{{/sessionComp}}
 
