기업추천 지원하기 완료

--- a/src/main/resources/templates/user/recommendForm.mustache
+++ b/src/main/resources/templates/user/recommendForm.mustache
@@ -131,8 +131,7 @@
 						<span class="badge bg-secondary me-1">{{skill.skillname}}</span>
 						{{/postingSkills}}
 						<div class="mt-3">
-							<a href="/user/applyForm/{{compInfoList.postingSkills.posting.id}}"
-								class="mb-3 ms-2 btn btn-info">지원하기</a>
+							<a href="/user/applyForm/{{id}}" class="mb-3 ms-2 btn btn-info">지원하기</a>
 						</div>
 					</div>
 				</div>
