--- a/src/main/resources/templates/user/bookmarkForm.mustache
+++ b/src/main/resources/templates/user/bookmarkForm.mustache
@@ -29,13 +29,14 @@
 					<div class="col-10">
 						<a href="/comp/posting/{{ id }}"
 						><img
-							src="공고사진"
+							src="{{#user}}../../../images/{{user.photo}}{{/user}}"
 							alt="{{ user.compname }}(
 				{{ title }}/{{ position }})"
 							class="img-thumbnail"
 							width="100px"
 							height="60px"
 						/></a>
+						{{ user.compname }}({{ title }}/{{ position }})
 					</div>
 					<div class="mt-2 mb-2">
 						<button type="button" class="btn btn-danger">삭제</button>
