--- a/src/main/resources/templates/user/bookmarkForm.mustache
+++ b/src/main/resources/templates/user/bookmarkForm.mustache
@@ -56,45 +56,45 @@
   </div>
 </div>
 <script>
-  // 삭제 버튼 클릭 이벤트 핸들러
-  document.addEventListener("click", function (e) {
-    if (e.target && e.target.classList.contains("delete-button")) {
-      var postingId = e.target.getAttribute("data-posting-id"); // 해당 공고의 ID를 가져옴
+ // 삭제 버튼 클릭 이벤트 핸들러
+document.addEventListener("click", function (e) {
+  if (e.target && e.target.classList.contains("delete-button")) {
+    var postingId = e.target.getAttribute("data-posting-id"); // 해당 공고의 ID를 가져옴
 
-      if (confirm("삭제하시겠습니까?")) {
-        // 사용자가 확인을 클릭한 경우
-        // 해당 아이템을 삭제하는 코드 추가
-        fetch("/user/bookmarkForm/delete", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/x-www-form-urlencoded",
-          },
-          body: "postingId=" + postingId, // 공고 ID를 서버로 보냄
-        })
-          .then(function (response) {
-            if (response.ok) {
-              // 삭제 성공
-              alert("공고가 삭제되었습니다.");
-              // var itemToRemove = e.target.closest(
-              //    ".d-flex.border.border-info.m-3.p-2"
-              //   );
-              //  if (itemToRemove) {
-              //      itemToRemove.remove(); // 해당 아이템을 삭제
-              //  }
-            } else {
-              // 삭제 실패
-              alert("공고 삭제에 실패했습니다.");
+    if (confirm("삭제하시겠습니까?")) {
+      // 사용자가 확인을 클릭한 경우
+      // 해당 아이템을 삭제하는 코드 추가
+      fetch("/user/bookmarkForm/delete", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/x-www-form-urlencoded",
+        },
+        body: "postingId=" + postingId, // 공고 ID를 서버로 보냄
+      })
+        .then(function (response) {
+          if (response.ok) {
+            // 삭제 성공
+            alert("공고가 삭제되었습니다.");
+
+            // 삭제된 아이템을 화면에서 제거
+            var itemToRemove = e.target.closest(".d-flex.border.border-info.m-3.p-2");
+            if (itemToRemove) {
+              itemToRemove.remove(); // 해당 아이템을 삭제
             }
-          })
-          .catch(function (error) {
-            console.error("Error:", error);
-          });
-      } else {
-        // 사용자가 취소를 클릭한 경우
-        // 아무 동작하지 않음
-      }
+          } else {
+            // 삭제 실패
+            alert("공고 삭제에 실패했습니다.");
+          }
+        })
+        .catch(function (error) {
+          console.error("Error:", error);
+        });
+    } else {
+      // 사용자가 취소를 클릭한 경우
+      // 아무 동작하지 않음
     }
-  });
+  }
+});
 </script>
 
 {{> layout/footer}}
