--- a/src/main/resources/templates/user/resumeForm.mustache
+++ b/src/main/resources/templates/user/resumeForm.mustache
@@ -17,13 +17,15 @@
       <a href="/user/recommendForm" class="w-100 btn btn-info">기업추천</a>
       <div class="m-2"></div>
     </div>
+
     <div class="col-9 ms-3">
       <h1 class="text-center mt-2">이력서 등록</h1>
       <form action="/user/resumeSave" method="post" enctype="multipart/form-data">
         <div class="d-flex">
           <div class="m-2 col-4 d-flex flex-column align-items-center">
-            <img id="preview" src="../../../../../images/{{sessionUser.photo}}" class="img-fluid rounded-circle"
-              style="width:150px; height:150px;" />
+            <img id="preview"
+              src="{{#sessionUser.photo}}{{sessionUser.photo}}{{/sessionUser.photo}}{{^sessionUser.photo}}../../../../../images/basic.jpg{{/sessionUser.photo}}"
+              class="img-fluid rounded-circle" style="width:150px; height:150px;" />
             <div class="input-group mb-3 mt-3">
               <input type="file" class="form-control" placeholder="Enter pto" name="pto" onchange="changePic(event)">
             </div>
@@ -32,23 +34,25 @@
           <div class="col-8 p-2">
             <div class="input-group mb-3">
               <span class="input-group-text"><span class="ms-2 me-4">이름</span></span>
-              <input type="text" class="form-control" name="username">
+              <input type="text" class="form-control" name="username" value="{{ sessionUser.username }}">
             </div>
             <div class="input-group mb-3">
               <span class="input-group-text">전화번호</span>
-              <input type="tel" class="form-control" name="tel">
+              <input type="tel" class="form-control" name="tel" value="{{ sessionUser.tel }}">
             </div>
-            <div class="input-group mb-3">
+            <div class=" input-group mb-3">
               <span class="input-group-text"><span class="ms-2 me-4">주소</span></span>
-              <input type="text" class="form-control" name="address">
+              <input type="text" class="form-control" name="address"
+                value="{{#sessionUser.address}}{{sessionUser.address}}{{/sessionUser.address}}{{^sessionUser.address}}{{/sessionUser.address}}">
             </div>
-            <div class="input-group mb-3">
+            <div class=" input-group mb-3">
               <span class="input-group-text">생년월일</span>
-              <input type="date" class="form-control" name="birth">
+              <input type="date" class="form-control" name="birth"
+                value="{{#sessionUser.birth}}{{ sessionUser.birth }}{{/sessionUser.birth}}{{^sessionUser.birth}}{{/sessionUser.birth}}">
             </div>
           </div>
         </div>
-        <div class="input-group ms-2 mb-3">
+        <div class=" input-group ms-2 mb-3">
           <span class="input-group-text">이력서 제목</span>
           <input type="text" class="form-control" name="title">
         </div>
@@ -60,6 +64,59 @@
           <span class="input-group-text" center>경력사항</span>
           <input type="text" class="form-control" name="career">
         </div>
+
+        <div class="card input-group ms-2 mb-3">
+          <span class="input-group-text">직무 선택</span>
+          <div class="d-flex flex-wrap">
+            <div class="form-check d-inline-block ms-3 me-2">
+              <label class="form-check-label">
+                <input class="form-check-input" type="radio" id="백엔드" name="position" value="백엔드">
+                백엔드</label>
+            </div>
+            <div class="form-check d-inline-block ms-3 me-2">
+              <label class="form-check-label">
+                <input class="form-check-input" type="radio" id="프론트엔드" name="position" value="프론트엔드">
+                프론트엔드</label>
+            </div>
+            <div class="form-check d-inline-block ms-3 me-2">
+              <label class="form-check-label">
+                <input class="form-check-input" type="radio" id="풀스택" name="position" value="풀스택">
+                풀스택</label>
+            </div>
+            <div class="form-check d-inline-block ms-3 me-2">
+              <label class="form-check-label">
+                <input class="form-check-input" type="radio" id="안드로이드" name="position" value="안드로이드">
+                안드로이드</label>
+            </div>
+            <div class="form-check d-inline-block ms-3 me-2">
+              <label class="form-check-label">
+                <input class="form-check-input" type="radio" id="IOS" name="position" value="IOS">
+                IOS</label>
+            </div>
+            <div class="form-check d-inline-block ms-3 me-2">
+              <label class="form-check-label">
+                <input class="form-check-input" type="radio" id="임베디드" name="position" value="임베디드">
+                임베디드</label>
+            </div>
+            <div class="form-check d-inline-block ms-3 me-2">
+              <label class="form-check-label">
+                <input class="form-check-input" type="radio" id="빅데이터" name="position" value="빅데이터">
+                빅데이터</label>
+            </div>
+            <div class="form-check d-inline-block ms-3 me-2">
+              <label class="form-check-label">
+                <input class="form-check-input" type="radio" id="서버" name="position" value="서버">
+                서버</label>
+            </div>
+            <div class="form-check d-inline-block ms-3 me-2">
+              <label class="form-check-label">
+                <input class="form-check-input" type="radio" id="머신러닝" name="position" value="머신러닝">
+                머신러닝</label>
+            </div>
+
+          </div>
+        </div>
+
         <div class="card input-group ms-2 mb-3">
           <span class="input-group-text">보유 기술</span>
           <div class="d-flex flex-wrap">
