--- a/src/main/resources/templates/master/search.mustache
+++ b/src/main/resources/templates/master/search.mustache
@@ -6,7 +6,21 @@
 	<div class="col-xxl-7 col-xl-9 col-lg-10 col-md-11 col-sm-12">
 
 
-        <div class="text-center m-1"><h3>통합검색</h3></div>
+        <div class="text-center mt-1"><h3>통합검색</h3></div>
+        <div class="text-center mb-3">검색어가 <b>회사명</b>, <b>공고명</b>, <b>이력서명</b>, <b>유저실명</b>에 포함되면 검색됩니다.</div>
+        
+        
+        {{#totalCount}}
+        <div class="text-center">결과 : 총합 <b>{{totalCount}}</b>개, <b>{{totalPage}}</b>페이지</div>
+
+        <ul class="pagination d-flex justify-content-center mt-1">
+            <li class="page-item {{#first}}disabled{{/first}}"><button class="page-link" onclick="searchAllPageMinus()">이전 페이지</button></li>
+            <li class="page-item"><div class="page-link">{{#pageSearchAll}}{{pageSearchAll}}{{/pageSearchAll}}{{^pageSearchAll}}0{{/pageSearchAll}}</div></li>
+            <li class="page-item {{#last}}disabled{{/last}}"><button class="page-link" onclick="searchAllPagePlus()">다음 페이지</button></li>
+        </ul>
+        {{/totalCount}}
+        
+
         
         {{#searchDTO}}
 
@@ -17,6 +31,53 @@
 
 
             
+
+            {{#compUserList}}
+            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                <div class="border border-info m-2 mb-0 ps-2 pe-2 pt-1" style="background-color: bisque;">
+                    <h4 class="text-center fw-bold">{{compname}}</h4>
+                    {{#photo}}
+                    <a href="/comp/company/{{id}}" class="text-black text-decoration-none"><img
+                        src="../../../images/{{photo}}" class="img-fluid d-block m-auto"
+                        style="height: 120px;">{{/photo}}
+                        {{^photo}}
+                        <a href="/comp/company/{{id}}" class="text-black text-decoration-none"><img
+                            src="../../../images/no_logo.png" class="img-fluid d-block m-auto"
+                            style="height: 120px;">
+                        {{/photo}}
+
+                        <div class="d-flex align-items-center mt-3">
+                            <span>전화번호 : </span>
+                            <span class="ms-1 fw-bold mt-2 mb-1"> {{tel}}</span>
+                        </div>
+
+                        <div class="d-flex align-items-center">
+                            <span>이메일 : </span>
+                            <span class="ms-1 fw-bold mt-2 mb-1">{{email}}</span>
+                        </div>
+
+                        <div class="d-flex align-items-center">
+                            <span>홈페이지 : </span>
+                            <span class="ms-1 fw-bold mt-2 mb-1">{{homepage}}</span>
+                        </div>
+
+                        <div class="d-flex align-items-center mb-2">
+                            <span>주소 : </span>
+                            <span class="ms-1 fw-bold mt-2 mb-1">{{address}}</span>
+                        </div>
+
+                    </a>
+                    
+                </a>
+                    <div class="d-flex justify-content-between">
+                
+                    </div>
+                </div>
+                <div class="text-center">기업</div>
+            </div>
+            {{/compUserList}}
+
+
 
 
 
@@ -95,57 +156,11 @@
                         <button type="button" class="invisible"><h3>🤍</h3></button>
                     </div>
                 </div>
-                <div class="text-center">이력서</div>
+                <div class="text-center">개인이력서</div>
             </div>
             {{/resumeList}}
 
 
-
-            
-            {{#compUserList}}
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="border border-info m-2 mb-0 ps-2 pe-2 pt-1" style="background-color: bisque;">
-                    <h4 class="text-center fw-bold">{{compname}}</h4>
-                    {{#photo}}
-                    <a href="/comp/company/{{id}}" class="text-black text-decoration-none"><img
-                        src="../../../images/{{photo}}" class="img-fluid d-block m-auto"
-                        style="height: 120px;">{{/photo}}
-                        {{^photo}}
-                        <a href="/comp/company/{{id}}" class="text-black text-decoration-none"><img
-                            src="../../../images/no_logo.png" class="img-fluid d-block m-auto"
-                            style="height: 120px;">
-                        {{/photo}}
-
-                        <div class="d-flex align-items-center mt-3">
-                            <span>전화번호 : </span>
-                            <span class="ms-1 fw-bold mt-2 mb-1"> {{tel}}</span>
-                        </div>
-
-                        <div class="d-flex align-items-center">
-                            <span>이메일 : </span>
-                            <span class="ms-1 fw-bold mt-2 mb-1">{{email}}</span>
-                        </div>
-
-                        <div class="d-flex align-items-center">
-                            <span>홈페이지 : </span>
-                            <span class="ms-1 fw-bold mt-2 mb-1">{{homepage}}</span>
-                        </div>
-
-                        <div class="d-flex align-items-center mb-2">
-                            <span>주소 : </span>
-                            <span class="ms-1 fw-bold mt-2 mb-1">{{address}}</span>
-                        </div>
-
-                    </a>
-                    
-                </a>
-                    <div class="d-flex justify-content-between">
-                
-                    </div>
-                </div>
-                <div class="text-center">기업</div>
-            </div>
-            {{/compUserList}}
 
 
 
@@ -160,7 +175,6 @@
 
         {{^searchDTO}}
         <h1 class="text-center">검색 결과 없음.</h1>
-        <div class="text-center">검색어가 <b>회사명</b>, <b>공고명</b>, <b>이력서명</b>에 포함되면 검색됩니다.</div>
         {{/searchDTO}}
 
     </div>
@@ -327,6 +341,31 @@
 
 	}
 
+
+
+
+
+    
+
+	function searchAllPagePlus() {
+		pageSearchAllFind = document.querySelector("#pageSearchAllFind")
+		// console.log(pageSearchAllFind.value);
+		pageSearchAllFind.value++; 
+		// console.log(pageSearchAllFind.value);
+        
+		let selectPageSearchAllForm = document.getElementById("selectPageSearchAllForm");
+		selectPageSearchAllForm.submit();
+	}
+
+	function searchAllPageMinus() {
+		pageSearchAllFind = document.querySelector("#pageSearchAllFind")
+		// console.log(pageSearchAllFind.value);
+		pageSearchAllFind.value--; 
+		// console.log(pageSearchAllFind.value);
+        
+		let selectPageSearchAllForm = document.getElementById("selectPageSearchAllForm");
+		selectPageSearchAllForm.submit();
+	}
 
 
 
