--- a/src/main/resources/templates/user/applyList.mustache
+++ b/src/main/resources/templates/user/applyList.mustache
@@ -52,9 +52,9 @@
 		</div>
 		<div class="main col-10">
 			<h1 class="text-center">지원내역</h1>
-			<table class="tg">
+			<table class="table table-hover">
 				<thead>
-					<tr>
+					<tr class="table-light">
 						<th>NO</th>
 						<th>공고명</th>
 						<th>이력서</th>
